Fix gap responsiveness in projects section

--- a/styles.css
+++ b/styles.css
@@ -238,13 +238,19 @@ a {
     text-align: left;
 }
 
-.projects .section-title
-{
+.projects .section-title {
     margin-top: 75px; /* for centering title with cards, formula = (300 - 150px) / 2 = 75px */
     /* 300 is height of cards, 150 is height of title without spiel */
 }
 
 @media (max-width: 1431px){ /* when items wrap to stack */
+    .projects {
+        flex-direction: column;
+        align-items: center;
+        gap: 130px;
+        padding-top: 180px;
+    }
+
     .projects .section-title {
         margin: 0;
         text-align: center;
@@ -341,7 +347,7 @@ input {
     margin: 64px 0 0 0 ;
 }
 
-.infos .info{
+.infos .info {
     position: absolute;
     inset: 0;
     opacity: 0;
@@ -368,8 +374,6 @@ input {
 
     gap: 16px;
     margin-top: 50px;
-
-    
 }
 
 .infos .button {
@@ -495,8 +499,7 @@ input {
     #s2:checked~.cards #slide1-etch,
     #s3:checked~.cards #slide2-rps,
     #s4:checked~.cards #slide3-tipmate {
-        transform: translate3d(calc(-130 * ((100vw - 520px) / 100)), 0, -140px);
-        
+        transform: translate3d(calc(-130 * ((100vw - 520px) / 100)), 0, -140px);    
     }
 
     #s1:checked~.cards #slide2-rps,
@@ -871,7 +874,6 @@ input {
 @media (max-width: 768px){
     /* about */
     .about{
-        /* padding-bottom: 180px; */
         padding-bottom: calc(120px + (180 - 120) * ((100vw - 320px) / (768 - 320)));
     }
 
@@ -918,8 +920,8 @@ input {
 
     /* projects (and parts of hobbies)*/
     .projects{
-        /* padding-top: 180px; */
         padding-top: calc(120px + (180 - 120) * ((100vw - 320px) / (768 - 320)));
+        gap: clamp(80px, 80px + 20 * ((100vw - 480px) / (768 - 480)), 100px);
         /* padding-bottom: 160px; */
     }
 
@@ -953,6 +955,7 @@ input {
     .projects{
         /* padding-top: 160px; */
         /* padding-bottom: 140px; */
+        gap: clamp(60px, 60px + 20 * ((100vw - 320px) / (480 - 320)), 80px);
     }
 
     .subtext{
